# cpp-template

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: compile-ci.yml
cmake/: FetchGTest.cmake
src/: app.cpp  app.hpp  main.cpp
src/core/: app.cpp  app.hpp
test/: CMakeLists.txt  app_gtest.cpp
